--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>typography</title>
+    <title>Typography</title>
   </head>
   <body>
-    <div class="text">
+    <div class="text-div">
       <h1>Move the mouse</h1>
     </div>
     <script src="./main.js"></script>
